Bug 1173593.  Make it possible to throw TypeError (or, in fact, any other Error from the content compartment) from js-implemented webidl.  r=bholley